# masked-email.alfredworkflow

./: .gitignore  Cargo.toml  justfile
.github/workflows/: release.yml
src/: main.rs
workflow/: info.plist  prefs.plist
