[package]
name = "masked-email"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
uuid = { version = "1.3.1", features = ["v4"] }

[profile.release]
# https://github.com/johnthagen/min-sized-rust
strip = true     # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
